loan payment's table set up

--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -7,6 +7,7 @@
 {% block content %}
     <h3>{{ bank_account.nick_name }}</h3>
     <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-5"><i class="bi bi-arrow-return-left"></i> Go back</a>
+
     <div class="my-3 border rounded-3">
         <h4 class="d-flex justify-content-center">Expenses</h4>
         <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 322px;">
@@ -42,7 +43,6 @@
             <p class="fs-6 fw-bold">Total: {{ total_amount(bank_account.expenses) }}</p>
         </div>
     </div>
-
 
     <div class="my-5 border rounded-3">
         <h4 class="d-flex justify-content-center">Incomes</h4>
@@ -80,19 +80,19 @@
 
     <div class="my-5 border rounded-3">
         <h4 class="d-flex justify-content-center">Loans</h4>
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-2" style="max-height: 457px;">
-            <table class="table table-borderless  table-hover">
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 457px;">
+            <table class="table table-borderless text-center  table-hover">
                 <thead class="sticky-top">
                     <tr class="table-warning">
-                    <th scope="col"># Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Remaining</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Is Cash</th>
-                    <th scope="col">Bank Account</th>
-                    <th scope="col">Create at</th>
+                        <th scope="col"># Id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Remaining</th>
+                        <th scope="col">Status</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Is Cash</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col">Create at</th>
                     </tr>
                 </thead>
                 
@@ -104,7 +104,7 @@
                         <td>{{ loan.amount }}</td>
                         <td> {{ loan.remaining_amount() }} </td>
                         <td>{{ 'ACTIVE' if loan.is_active else 'PAID'  }}</td>
-                        <td>{{ loan.description }}</td>
+                        <td class="text-start">{{ loan.description }}</td>
                         <td>{{ 'YES' if loan.is_cash else 'NO'  }}</td>
                         <td>{{ loan.bank_account.nick_name }}</td>
                         <td>{{ loan.created_at }}</td>
@@ -120,6 +120,31 @@
 
     <div class="my-5 border rounded-3">
         <h4 class="d-flex justify-content-center">Loans Payments</h4>
+
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 300px;">
+            <table class="table table-borderless table-hover text-center" id="expenses-table">
+                <thead class="sticky-top">
+                    <tr class="table-success">
+                        <th scope="col"># Id</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">is_cash</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col">Create at</th>
+                    </tr>
+                </thead>
+                <tbody id="expenses-table-body">
+                    {% for payment in bank_account.loan_payments %}                
+                    <tr>
+                        <th scope="row">{{ payment.id }}</th>
+                        <td>{{ payment.amount }}</td>
+                        <td>{{ payment.is_cash }}</td>
+                        <td>{{ payment.bank_account.nick_name }}</td>
+                        <td>{{ payment.created_at }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
             <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.loan_payments) }}</p>
