--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -9,8 +9,10 @@
     <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-5"><i class="bi bi-arrow-return-left"></i> Go back</a>
 
     <div class="my-3 border rounded-3">
-        <h4 class="d-flex justify-content-center">Expenses</h4>
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 322px;">
+        <div class="bg-danger rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+            <h4 class="d-flex justify-content-center">Expenses</h4>
+        </div>
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
             <table class="table table-borderless table-hover" id="expenses-table">
                 <thead class="sticky-top" >
                     <tr class="table-danger">
@@ -45,8 +47,10 @@
     </div>
 
     <div class="my-5 border rounded-3">
-        <h4 class="d-flex justify-content-center">Incomes</h4>
-        <div id="incomes-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 322px;">
+        <div class="bg-primary rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+            <h4 class="d-flex justify-content-center">Incomes</h4>
+        </div>
+        <div id="incomes-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
             <table class="table table-borderless table-hover">
                 <thead class="sticky-top">
                     <tr class="table-info">
@@ -79,8 +83,10 @@
     </div>
 
     <div class="my-5 border rounded-3">
-        <h4 class="d-flex justify-content-center">Loans</h4>
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 457px;">
+        <div class="bg-warning rounded-top d-flex align-items-center justify-content-center" style="height: 50px; color: #4a3b00;">
+            <h4 class="d-flex justify-content-center fw-bold">Loans</h4>
+        </div>
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 457px;">
             <table class="table table-borderless text-center  table-hover">
                 <thead class="sticky-top">
                     <tr class="table-warning">
@@ -119,9 +125,11 @@
     </div>
 
     <div class="my-5 border rounded-3">
-        <h4 class="d-flex justify-content-center">Loans Payments</h4>
+        <div class="bg-success rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+            <h4 class="d-flex justify-content-center">Loan Payments</h4>
+        </div>
 
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto mt-1" style="max-height: 300px;">
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 300px;">
             <table class="table table-borderless table-hover text-center" id="expenses-table">
                 <thead class="sticky-top">
                     <tr class="table-success">
@@ -152,7 +160,35 @@
     </div>
 
     <div class="my-5 border rounded-3">
-        <h4 class="d-flex justify-content-center">Credit Card Payments</h4>
+        <div class="bg-secondary rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+            <h4 class="d-flex justify-content-center">Credit Card Payments</h4>
+        </div>
+
+            <div id="payments-table-container" class="table-responsive overflow-y-auto" style="max-height: 322;">
+                <table class="table table-borderless table-hover" id="expenses-table">
+                    <thead class="sticky-top">
+                        <tr class="table-secondary">
+                            <th scope="col"># Id</th>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Credit Card</th>
+                            <th scope="col">Bank Account</th>
+                            <th scope="col">Create at</th>
+                        </tr>
+                    </thead>
+                    <tbody id="payments-table-body">
+                        {% for payment in bank_account.credit_card_payments %}                
+                        <tr>
+                            <th scope="row">{{ payment.id }}</th>
+                            <td>{{ payment.amount }}</td>
+                            <td>{{ payment.credit_card.nick_name or '-' }}</td>
+                            <td>{{ payment.bank_account.nick_name or '-' }}</td>
+                            <td>{{ payment.created_at }}</td>
+                        </tr>
+                        {% endfor %}
+                        
+                    </tbody>
+                </table>
+            </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
             <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.credit_card_payments) }}</p>
@@ -160,7 +196,35 @@
     </div>
 
     <div class="my-5 border rounded-3">
-        <h4 class="d-flex justify-content-center">Withdrawals</h4>
+        <div class="bg-info rounded-top d-flex align-items-center justify-content-center" style="height: 50px; color: #cff4fc">
+            <h4 class="d-flex justify-content-center">Withdrawals</h4>
+        </div>
+
+        <div class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless  table-hover">
+                <thead class="sticky-top">
+                    <tr class="table-info">
+                        <th scope="col"># Id</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col">Create at</th>
+                    </tr>
+                </thead>
+                
+                <tbody  id="withdrawals-table-body-id">
+                  {% for withdrawal in bank_account.withdrawals %}
+                    <tr>
+                        <th scope="row">{{ withdrawal.id }}</th>
+                        <td>{{ withdrawal.amount }}</td>
+                        <td>{{ withdrawal.description if withdrawal.description else '-'}}</td>
+                        <td>{{ withdrawal.bank_account.nick_name }}</td>
+                        <td>{{ withdrawal.created_at }}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
             <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.withdrawals) }}</p>
