--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -9,32 +9,32 @@
     <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-5"><i class="bi bi-arrow-return-left"></i> Go back</a>
 
     <div class="my-3 border rounded-3">
-        <div class="bg-danger rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+        <div class=" rounded-top d-flex align-items-center justify-content-center" style="height: 50px; background-color: #ff0000;">
             <h4 class="d-flex justify-content-center">Expenses</h4>
         </div>
         <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
-            <table class="table table-borderless table-hover" id="expenses-table">
+            <table class="table table-borderless table-hover text-center" id="expenses-table">
                 <thead class="sticky-top" >
                     <tr class="table-danger">
-                        <th scope="col" class="text-center"># Id</th>
-                        <th scope="col" class="text-center">Amount</th>
-                        <th scope="col">Description</th>
-                        <th scope="col" class="text-center">Credit Card</th>
-                        <th scope="col" class="text-center">Bank Account</th>
-                        <th scope="col" class="text-center">Category</th>
-                        <th scope="col" class="text-center">Create at</th>
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Credit Card</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col" class="text-start">Category</th>
+                        <th scope="col">Create at</th>
                     </tr>
                 </thead>
                 <tbody id="expenses-table-body">
                     {% for expense in bank_account.expenses %}                
                     <tr>
-                        <th scope="row" class="text-center">{{ expense.id }}</th>
-                        <td class="text-center">{{ expense.amount }}</td>
-                        <td> {{ expense.description or '-' }} </td>
-                        <td class="text-center">{{ expense.credit_card.nick_name or '-' }}</td>
-                        <td class="text-center">{{ expense.bank_account.nick_name }}</td>
-                        <td class="text-center">{{ expense.expense_category.name }}</td>
-                        <td class="text-center">{{ expense.created_at }}</td>
+                        <th scope="row">{{ expense.id }}</th>
+                        <td class="text-start">{{ format_amount(expense.amount) }}</td>
+                        <td class="text-start"> {{ expense.description or '-' }} </td>
+                        <td>{{ expense.credit_card.nick_name or '-' }}</td>
+                        <td>{{ expense.bank_account.nick_name }}</td>
+                        <td class="text-start">{{ expense.expense_category.name }}</td>
+                        <td>{{ expense.created_at }}</td>
                     </tr>
                     {% endfor %}
                     
@@ -42,7 +42,7 @@
             </table>
         </div>
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold">Total: {{ total_amount(bank_account.expenses) }}</p>
+            <p class="fs-6 fw-bold">TOTAL: {{ total_amount(bank_account.expenses) }}</p>
         </div>
     </div>
 
@@ -51,34 +51,70 @@
             <h4 class="d-flex justify-content-center">Incomes</h4>
         </div>
         <div id="incomes-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
-            <table class="table table-borderless table-hover">
+            <table class="table table-borderless table-hover text-center">
                 <thead class="sticky-top">
                     <tr class="table-info">
-                        <th scope="col" class="text-center"># Id</th>
-                        <th scope="col" class="text-center">Amount</th>
-                        <th scope="col" class="text-center">Is Cash</th>
-                        <th scope="col">Description</th>
-                        <th scope="col" class="text-center">Bank Account</th>
-                        <th scope="col" class="text-center">Create at</th>
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">Is Cash</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col">Create at</th>
                     </tr>
                 </thead>
                 
                 <tbody id="incomes-table-body-id">
                   {% for income in bank_account.incomes %}
                     <tr>
-                        <th scope="row" class="text-center">{{ income.id }}</th>
-                        <td class="text-center">{{ income.amount }}</td>
-                        <td class="text-center">{{ income.is_cash }}</td>
-                        <td>{{ income.description if income.description else '-'}}</td>
-                        <td class="text-center">{{ income.bank_account.nick_name }}</td>
-                        <td class="text-center">{{ income.created_at }}</td>
+                        <th scope="row">{{ income.id }}</th>
+                        <td class="text-start">{{ format_amount(income.amount) }}</td>
+                        <td>{{ 'YES' if income.is_cash else 'NO' }}</td>
+                        <td class="text-start">{{ income.description if income.description else '-'}}</td>
+                        <td>{{ income.bank_account.nick_name }}</td>
+                        <td>{{ income.created_at }}</td>
                     </tr>
                   {% endfor %}
                 </tbody>
             </table>
         </div>
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold">Total: {{ total_amount(bank_account.incomes) }}</p>
+            <p class="fs-6 fw-bold">TOTAL: {{ total_amount(bank_account.incomes) }}</p>
+        </div>
+    </div>
+
+    <div class="my-5 border rounded-3">
+        <div class="rounded-top d-flex align-items-center justify-content-center" style="height: 50px; background-color: #000000bb;">
+            <h4 class="d-flex justify-content-center">Withdrawals</h4>
+        </div>
+
+        <div class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless table-hover text-center">
+                <thead class="sticky-top">
+                    <tr class="table-light" >
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col">Create at</th>
+                    </tr>
+                </thead>
+                
+                <tbody  id="withdrawals-table-body-id">
+                  {% for withdrawal in bank_account.withdrawals %}
+                    <tr>
+                        <th scope="row">{{ withdrawal.id }}</th>
+                        <td class="text-start">{{ format_amount(withdrawal.amount) }}</td>
+                        <td class="text-start">{{ withdrawal.description if withdrawal.description else '-'}}</td>
+                        <td>{{ withdrawal.bank_account.nick_name }}</td>
+                        <td>{{ withdrawal.created_at }}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(bank_account.withdrawals) }}</p>
         </div>
     </div>
 
@@ -86,17 +122,17 @@
         <div class="bg-warning rounded-top d-flex align-items-center justify-content-center" style="height: 50px; color: #4a3b00;">
             <h4 class="d-flex justify-content-center fw-bold">Loans</h4>
         </div>
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 457px;">
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
             <table class="table table-borderless text-center  table-hover">
                 <thead class="sticky-top">
                     <tr class="table-warning">
                         <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">Is Cash</th>
                         <th scope="col">Name</th>
-                        <th scope="col">Amount</th>
                         <th scope="col">Remaining</th>
                         <th scope="col">Status</th>
                         <th scope="col" class="text-start">Description</th>
-                        <th scope="col">Is Cash</th>
                         <th scope="col">Bank Account</th>
                         <th scope="col">Create at</th>
                     </tr>
@@ -106,12 +142,12 @@
                   {% for loan in bank_account.loans %}
                     <tr class="loan-row" data-loan-id="{{ loan.id }}" data-url-associated-records = "{{ url_for('accounts_receivable.associated_records', loan_id=loan.id) }}">
                         <th scope="row">{{ loan.id }}</th>
+                        <td class="text-start">{{ format_amount(loan.amount) }}</td>
+                        <td>{{ 'YES' if loan.is_cash else 'NO'  }}</td>
                         <td>{{ loan.person_name }}</td>
-                        <td>{{ loan.amount }}</td>
                         <td> {{ loan.remaining_amount() }} </td>
                         <td>{{ 'ACTIVE' if loan.is_active else 'PAID'  }}</td>
                         <td class="text-start">{{ loan.description }}</td>
-                        <td>{{ 'YES' if loan.is_cash else 'NO'  }}</td>
                         <td>{{ loan.bank_account.nick_name }}</td>
                         <td>{{ loan.created_at }}</td>
                     </tr>
@@ -120,7 +156,7 @@
             </table>
         </div>
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.loans) }}</p>
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(bank_account.loans) }}</p>
         </div>
     </div>
 
@@ -129,13 +165,13 @@
             <h4 class="d-flex justify-content-center">Loan Payments</h4>
         </div>
 
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 300px;">
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
             <table class="table table-borderless table-hover text-center" id="expenses-table">
                 <thead class="sticky-top">
                     <tr class="table-success">
                         <th scope="col"># Id</th>
-                        <th scope="col">Amount</th>
-                        <th scope="col">is_cash</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">Is Cash</th>
                         <th scope="col">Bank Account</th>
                         <th scope="col">Create at</th>
                     </tr>
@@ -144,8 +180,8 @@
                     {% for payment in bank_account.loan_payments %}                
                     <tr>
                         <th scope="row">{{ payment.id }}</th>
-                        <td>{{ payment.amount }}</td>
-                        <td>{{ payment.is_cash }}</td>
+                        <td class="text-start">{{ format_amount(payment.amount) }}</td>
+                        <td>{{ 'YES' if payment.is_cash else 'NO' }}</td>
                         <td>{{ payment.bank_account.nick_name }}</td>
                         <td>{{ payment.created_at }}</td>
                     </tr>
@@ -155,7 +191,7 @@
         </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.loan_payments) }}</p>
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(bank_account.loan_payments) }}</p>
         </div>
     </div>
 
@@ -164,12 +200,12 @@
             <h4 class="d-flex justify-content-center">Credit Card Payments</h4>
         </div>
 
-            <div id="payments-table-container" class="table-responsive overflow-y-auto" style="max-height: 322;">
-                <table class="table table-borderless table-hover" id="expenses-table">
+            <div id="payments-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+                <table class="table table-borderless table-hover text-center" id="expenses-table">
                     <thead class="sticky-top">
                         <tr class="table-secondary">
                             <th scope="col"># Id</th>
-                            <th scope="col">Amount</th>
+                            <th scope="col" class="text-start">Amount</th>
                             <th scope="col">Credit Card</th>
                             <th scope="col">Bank Account</th>
                             <th scope="col">Create at</th>
@@ -179,7 +215,7 @@
                         {% for payment in bank_account.credit_card_payments %}                
                         <tr>
                             <th scope="row">{{ payment.id }}</th>
-                            <td>{{ payment.amount }}</td>
+                            <td class="text-start">{{ format_amount(payment.amount) }}</td>
                             <td>{{ payment.credit_card.nick_name or '-' }}</td>
                             <td>{{ payment.bank_account.nick_name or '-' }}</td>
                             <td>{{ payment.created_at }}</td>
@@ -191,43 +227,8 @@
             </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.credit_card_payments) }}</p>
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(bank_account.credit_card_payments) }}</p>
         </div>
     </div>
 
-    <div class="my-5 border rounded-3">
-        <div class="bg-info rounded-top d-flex align-items-center justify-content-center" style="height: 50px; color: #cff4fc">
-            <h4 class="d-flex justify-content-center">Withdrawals</h4>
-        </div>
-
-        <div class="table-responsive overflow-y-auto" style="max-height: 322px;">
-            <table class="table table-borderless  table-hover">
-                <thead class="sticky-top">
-                    <tr class="table-info">
-                        <th scope="col"># Id</th>
-                        <th scope="col">Amount</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Bank Account</th>
-                        <th scope="col">Create at</th>
-                    </tr>
-                </thead>
-                
-                <tbody  id="withdrawals-table-body-id">
-                  {% for withdrawal in bank_account.withdrawals %}
-                    <tr>
-                        <th scope="row">{{ withdrawal.id }}</th>
-                        <td>{{ withdrawal.amount }}</td>
-                        <td>{{ withdrawal.description if withdrawal.description else '-'}}</td>
-                        <td>{{ withdrawal.bank_account.nick_name }}</td>
-                        <td>{{ withdrawal.created_at }}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold mx-2">Total: {{ total_amount(bank_account.withdrawals) }}</p>
-        </div>
-    </div>
 {% endblock %}
