--- a/app/templates/expense_categories/associated_records.html
+++ b/app/templates/expense_categories/associated_records.html
@@ -1,41 +1,49 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    {{data.category.name}}
+    {{category.name}}
 {% endblock %}
 
 {% block content %}
-    <h3>{{ data.category.name }}</h3>
-    <h4 class="mt-2">Expenses</h4>
     <a href="{{ url_for('expense_category.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
-    <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
-                <table class="table table-striped table-hover" id="expenses-table">
-            <thead class="sticky-top">
-                <tr>
-                    <th scope="col"># Id</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Credit Card</th>
-                    <th scope="col">Bank Account</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Create at</th>
-                </tr>
-            </thead>
-            <tbody id="expenses-table-body">
-                {% for expense in data.expenses %}                
-                <tr>
-                    <th scope="row">{{ expense.id }}</th>
-                    <td>{{ expense.amount }}</td>
-                    <td> {{ expense.description or '-' }} </td>
-                    <td>{{ expense.credit_card.nick_name or '-' }}</td>
-                    <td>{{ expense.bank_account.nick_name or '-' }}</td>
-                    <td>{{ expense.expense_category.name }}</td>
-                    <td>{{ expense.created_at }}</td>
-                </tr>
-                {% endfor %}
-                
-            </tbody>
-        </table>
+    <h3>{{ category.name }}</h3>
+    <div class="my-3 border rounded-3">
+        <div class=" rounded-top d-flex align-items-center justify-content-center" style="height: 50px; background-color: #ff0000;">
+            <h4 class="d-flex justify-content-center">Expenses</h4>
+        </div>
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless table-hover text-center" id="expenses-table">
+                <thead class="sticky-top" >
+                    <tr class="table-danger">
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">Is Cash</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Credit Card</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col" class="text-start">Category</th>
+                        <th scope="col">Create at</th>
+                    </tr>
+                </thead>
+                <tbody id="expenses-table-body">
+                    {% for expense in category.expenses %}                
+                    <tr>
+                        <th scope="row">{{ expense.id }}</th>
+                        <td class="text-start">{{ format_amount(expense.amount) }}</td>
+                        <td>{{ 'YES' if expense.credit_card.is_cash else 'NO' }}</td>
+                        <td class="text-start"> {{ expense.description or '-' }} </td>
+                        <td>{{ expense.credit_card.nick_name or '-' }}</td>
+                        <td>{{ expense.bank_account.nick_name }}</td>
+                        <td class="text-start">{{ expense.expense_category.name }}</td>
+                        <td>{{ expense.created_at }}</td>
+                    </tr>
+                    {% endfor %}
+                    
+                </tbody>
+            </table>
+        </div>
+        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
+            <p class="fs-6 fw-bold">TOTAL: {{ total_amount(category.expenses) }}</p>
+        </div>
     </div>
-    <p class="">Total: {{ data.total_expenses }}</p>
 {% endblock %}
