--- a/app/templates/accounts_receivable/associated_records.html
+++ b/app/templates/accounts_receivable/associated_records.html
@@ -57,50 +57,60 @@
         </form>
     </section>
     
-    <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
-                <table class="table table-striped table-hover" id="expenses-table">
-            <thead class="sticky-top">
-                <tr>
-                    <th scope="col"># Id</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">is_cash</th>
-                    <th scope="col">Bank Account</th>
-                    <th scope="col">Create at</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody id="expenses-table-body">
-                {% for payment in loan.loan_payments %}                
-                <tr>
-                    <th scope="row">{{ payment.id }}</th>
-                    <td>{{ payment.amount }}</td>
-                    <td>{{ payment.is_cash }}</td>
-                    <td>{{ payment.bank_account.nick_name }}</td>
-                    <td>{{ payment.created_at }}</td>
-                    <td>
-                        <div class="d-flex gap-2">
-                            <button 
-                                type="button" 
-                                class="btn btn-success" 
-                                data-bs-toggle="modal" 
-                                data-bs-target="#edit-loan-payment"
-                                data-endpoint="{{ url_for('accounts_receivable.update_loan_payment', loan_payment_id=payment.id) }}"
-                                data-loan-id="{{ loan.id }}"
-                                data-loan-payment-id="{{ payment.id }}"
-                                data-amount="{{ payment.amount }}"
-                                data-is-cash="{{ payment.is_cash }}"
-                                data-bank-account-id="{{ payment.bank_account_id }}"
-                            >
-                            Edit
-                            </button>
-                            <a href="{{ url_for('accounts_receivable.delete_loan_payment', loan_payment_id=payment.id) }}" class="btn btn-danger">Delete</a>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="my-5 border rounded-3">
+        <div class="bg-success rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+            <h4 class="d-flex justify-content-center">Loan Payments</h4>
+        </div>
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 300px;">
+            <table class="table table-striped table-hover text-center" id="expenses-table">
+                <thead class="sticky-top">
+                    <tr>
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">is_cash</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col">Create at</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="expenses-table-body">
+                    {% for payment in loan.loan_payments %}                
+                    <tr>
+                        <th scope="row">{{ payment.id }}</th>
+                        <td class="text-start">{{ payment.amount }}</td>
+                        <td>{{ payment.is_cash }}</td>
+                        <td>{{ payment.bank_account.nick_name }}</td>
+                        <td>{{ payment.created_at }}</td>
+                        <td>
+                            <div class="d-flex gap-2">
+                                <button 
+                                    type="button" 
+                                    class="btn btn-success" 
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#edit-loan-payment"
+                                    data-endpoint="{{ url_for('accounts_receivable.update_loan_payment', loan_payment_id=payment.id) }}"
+                                    data-loan-id="{{ loan.id }}"
+                                    data-loan-payment-id="{{ payment.id }}"
+                                    data-amount="{{ payment.amount }}"
+                                    data-is-cash="{{ payment.is_cash }}"
+                                    data-bank-account-id="{{ payment.bank_account_id }}"
+                                >
+                                Edit
+                                </button>
+                                <a href="{{ url_for('accounts_receivable.delete_loan_payment', loan_payment_id=payment.id) }}" class="btn btn-danger">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(bank_account.loan_payments) }}</p>
+        </div>
     </div>
+
     <p class="">Total: {{ total_expenses }}</p>
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
