--- a/app/templates/accounts_receivable/associated_records.html
+++ b/app/templates/accounts_receivable/associated_records.html
@@ -6,7 +6,6 @@
 
 {% block content %}
     <h3>Loan #{{ loan.id }} at {{ loan.created_at }}</h3>
-    <h4 class="mt-2">Payments</h4>
     <a href="{{ url_for('accounts_receivable.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <section class="modal fade" tabindex="-1" id="edit-loan-payment">
         <form id="edit-loan-payment-form">
@@ -57,14 +56,14 @@
         </form>
     </section>
     
-    <div class="my-5 border rounded-3">
+    <div class="mt-2 border rounded-3">
         <div class="bg-success rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
             <h4 class="d-flex justify-content-center">Loan Payments</h4>
         </div>
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 300px;">
-            <table class="table table-striped table-hover text-center" id="expenses-table">
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless table-hover text-center" id="expenses-table">
                 <thead class="sticky-top">
-                    <tr>
+                    <tr class="table-success">
                         <th scope="col"># Id</th>
                         <th scope="col" class="text-start">Amount</th>
                         <th scope="col">is_cash</th>
@@ -78,11 +77,11 @@
                     <tr>
                         <th scope="row">{{ payment.id }}</th>
                         <td class="text-start">{{ payment.amount }}</td>
-                        <td>{{ payment.is_cash }}</td>
+                        <td>{{ 'YES' if payment.is_cash else 'NO' }}</td>
                         <td>{{ payment.bank_account.nick_name }}</td>
                         <td>{{ payment.created_at }}</td>
                         <td>
-                            <div class="d-flex gap-2">
+                            <div class="d-flex gap-2 justify-content-center">
                                 <button 
                                     type="button" 
                                     class="btn btn-success" 
@@ -107,7 +106,7 @@
         </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(bank_account.loan_payments) }}</p>
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(loan.loan_payments) }}</p>
         </div>
     </div>
 
