--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -14,10 +14,16 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <div class="col-sm">
+                            <div class="">
                                 <div class="form-floating mt-2 w-">
                                     <input type="text" name="name" id="name" class="form-control" placeholder="Bank name" required>
                                     <label for="name">Category name</label>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="form-floating mt-2 w-">
+                                    <input type="text" name="limit" id="limit-id" class="form-control" placeholder="Limit" required>
+                                    <label for="limit-id">Limit</label>
                                 </div>
                             </div>
                         </div>
